# Orbis-search

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
orbis_search/: __init__.py  search_engine.py  server.py
tests/: __init__.py  test_search_engine.py
